@@ -370,7 +370,7 @@ public class BufferIORequest extends WorkRequest
 		SegmentBuffer seg = new SegmentBuffer((int)length + 1);
 
 		InputStreamReader in = new InputStreamReader(_in,
-			(String)buffer.getProperty(Buffer.ENCODING));
+			buffer.getStringProperty(Buffer.ENCODING));
 		char[] buf = new char[IOBUFSIZE];
 
 		// Number of characters in 'buf' array.
@@ -755,10 +755,10 @@ public class BufferIORequest extends WorkRequest
 	{
 		BufferedWriter out = new BufferedWriter(
 			new OutputStreamWriter(_out,
-				(String)buffer.getProperty(Buffer.ENCODING)),
+				buffer.getStringProperty(Buffer.ENCODING)),
 				IOBUFSIZE);
 		Segment lineSegment = new Segment();
-		String newline = (String)buffer.getProperty(Buffer.LINESEP);
+		String newline = buffer.getStringProperty(Buffer.LINESEP);
 		if(newline == null)
 			newline = System.getProperty("line.separator");
 
